--- a/style.css
+++ b/style.css
@@ -8,11 +8,18 @@ body {
 p {font-size: 16px;}
 .margin {margin-bottom: 15px;}
 
-.container-fluid {
-  padding: 0px;
-  /*padding-bottom: 70px;*/
+.container-fluid {margin-bottom: 0 }
+
+.center {
+  display: block;
+  margin-left: 400px;
+  margin-right: 512px;
+  ;
+  width: 300%;
+
+.navbar-custom {
+    background-color:#211d21;
+.navbar { margin-bottom: 0 }
 }
 
-.navbar {
-  padding-top: 0px;
-}
+
