--- a/01_intro/style.css
+++ b/01_intro/style.css
@@ -1,7 +1,7 @@
 body {
     font: 20px Montserrat, sans-serif;
     line-height: 1.8;
-    color: black;
+    color: whitesmoke;
     
   }
 
@@ -15,11 +15,8 @@ p {font-size: 16px;}
   margin-left: 400px;
   margin-right: 512px;
   ;
-  width: 300%;
+  width: 300%;}
 
-.navbar-custom {
-    background-color:#211d21;
-.navbar { margin-bottom: 0 }
-}
+  
 
 
