--- a/01_intro/style.css
+++ b/01_intro/style.css
@@ -1,21 +1,9 @@
-body {
-    font: 20px Montserrat, sans-serif;
-    line-height: 1.8;
-    color: whitesmoke;
-    
-  }
-
-p {font-size: 16px;}
-.margin {margin-bottom: 15px;}
 
 .container-fluid {margin-bottom: 0 }
 
 .center {
-  display: block;
-  margin-left: 400px;
-  margin-right: 512px;
-  ;
-  width: 300%;}
+  margin-left: auto;
+  margin-right: auto;}
 
   
 
