--- a/12_final/proposal/style.css
+++ b/12_final/proposal/style.css
@@ -17,8 +17,9 @@ p {font-size: 16px;}
   ;
   width: 300%;}
 
-.navbar-custom {
-    background-color:#211d21;}
-.navbar { margin-bottom: 0 }
+.food1 img {
+    width:50%;
+    height: 50%px;
+}
 
 
